--- a/material-theme-gh-pages/_config.yml
+++ b/material-theme-gh-pages/_config.yml
@@ -3,7 +3,7 @@ description: "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam 
 about: "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam"
 location: "Your Region, Country"
 email: your-email@example.com
-baseurl: "/material-theme"
+baseurl: "/Grant-Ross.github.io"
 
 url: "https://www.grant-ross.github.io" # replace by your site's url
 twitter_username: your-name
@@ -12,9 +12,6 @@ author: "Your Name"
 
 # google analytics tracking code, please change the value
 g_analytics: ""
-
-# add your disqus to enable comments
-disqus_shortname:
 
 # add your disqus to enable comments
 disqus_shortname:
